chore: install typescript

--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "homepage": "https://bitbucket.org/enfogroupcloud/hackathon-unit-tests#readme"
+  "homepage": "https://bitbucket.org/enfogroupcloud/hackathon-unit-tests#readme",
+  "devDependencies": {
+    "typescript": "^4.2.2"
+  }
 }
