--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/enfogroupcloud/hackathon-unit-tests#readme",
   "devDependencies": {
+    "jest": "^26.6.3",
     "typescript": "^4.2.2"
   }
 }
