--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "homepage": "https://bitbucket.org/enfogroupcloud/hackathon-unit-tests#readme",
   "devDependencies": {
     "jest": "^26.6.3",
+    "ts-jest": "^26.5.3",
     "typescript": "^4.2.2"
   }
 }
