--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/enfogroupcloud/hackathon-unit-tests#readme",
   "devDependencies": {
+    "@types/jest": "^26.0.20",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.3",
     "typescript": "^4.2.2"
